--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "yashas",
   "license": "ISC",
   "dependencies": {
+    "alert": "^6.0.1",
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
